[package]
name = "pty-proc"
version = "1.0.0"
authors = [
  "adjivas <adjivas@users.noreply.github.com>",
  "Jeremy PEPIN <jpepin@student.42.fr>"
]
keywords = ["pty", "shell", "mode", "proc"]
license = "GPL-3.0"

[[bin]]
name = "pty-proc"
test = false
doc = false

[lib]
test = false
doctest = false

[features]
default       = []
signal        = []
idle          = []
task          = []
keyboard-time = []
lints         = ["clippy", "nightly"]
nightly       = [] # for building with nightly and unstable features
unstable      = [] # for building with unstable features on stable Rust
debug         = [] # for building with debug messages
travis        = ["lints", "nightly"] # for building with travis-cargo

[dependencies.pty]
version       = "0.2"

[dependencies.time]
version       = "0.1"

[dependencies.chan]
version       = "0.1.18"

[dependencies.errno]
version       = "0.1"

[dependencies.libc]
version       = "0.2"

[dependencies.clippy]
version       = "*"
optional      = true
